<resources>
    <string name="app_name">UFMSQuizz</string>
    <!-- Strings related to btnRegistroConfirmar -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Tela de Login e Registro -->
    <string name="login">Login:</string>
    <string name="preencher_dados">Preencha com seus dados:</string>
    <string name="campo_email">Email</string>
    <string name="campo_senha">Senha</string>
    <string name="campo_confirmar_senha">Confirmar senha</string>
    <string name="botao_entrar">Entrar</string>
    <string name="criar_conta">Ainda não tem uma conta?</string>
    <string name="botao_registrar">Registrar</string>

    <!-- Tela de Perfil -->
    <string name="nome_usuario">Nome:</string>
    <string name="email_usuario">Email:</string>
    <string name="alterar_conta">Salvar</string>
    <string name="sair_conta">Sair</string>
    <string name="excluir_conta">Excluir conta</string>

    <!-- Tela de Quizz -->
    <string name="title_activity_tela_quiz">TelaQuiz</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string-array name="array_quiz1">
        <item>Você costuma ter facilidade em fazer novas amizades?</item>

        <item>Sempre</item>
        <item>De vez em quando</item>
        <item>Raramente</item>
        <item>Nunca</item>

        <item>Qual dessas é uma das suas principais qualidades?</item>

        <item>Companherismo</item>
        <item>Inteligência</item>
        <item>Paciência</item>
        <item>Coragem</item>

        <item>Você se considera uma pessoa da:</item>

        <item>Madrugada</item>
        <item>Manhã</item>
        <item>Noite</item>
        <item>Tarde</item>

        <item>Qual dos continentes você tem vontade de conhecer?</item>

        <item>América</item>
        <item>Europa</item>
        <item>África</item>
        <item>Ásia</item>

        <item>Qual a sua altura?</item>

        <item>1,71 - 1,80</item>
        <item>1,81+</item>
        <item>1,61 - 1,70</item>
        <item>1,50 - 1,60</item>

    </string-array>

    <string-array name="array_quiz2">
        <item>Você desce do avião da SHIELD, em plena Times Square destruída.
            O vilão está a cinco quarteirões de distância de você, e começa a te encarar, o que você faz?</item>

        <item>Pega uma metralhadora e começa a atirar dali mesmo</item>
        <item>Encara ele e corre em direção ao combate</item>
        <item>Voa até lá para dar uma surra nele</item>
        <item>Se teletransporta para trás dele e o derrota</item>

        <item>Qual dessas é uma das suas principais qualidades?</item>

        <item>Força</item>
        <item>Coragem</item>
        <item>Inteligência</item>
        <item>Determinação</item>

        <item>Quais os poderes que você gostaria ter?</item>

        <item>Super Força</item>
        <item>Resistência sobre-humana</item>
        <item>Inteligência extrema</item>
        <item>Magia</item>

        <item>O que você mais gosta de fazer no seu tempo livre?</item>

        <item>Estudar</item>
        <item>Praticar Exercícios</item>
        <item>Videogame</item>
        <item>Passar um tempo com a família</item>

        <item>Quando sente raiva o que faz?</item>

        <item>Explode</item>
        <item>Respira e se acalma</item>
        <item>Se vinga mais tarde</item>
        <item>Disfarça a raiva</item>

    </string-array>

</resources>